--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <img v-bind:src="image">
+            <img v-bind:src="image" v-bind:class="{'out-of-stock-img':!inStock}">
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
@@ -31,8 +31,14 @@
               v-for="variant in variants" 
               :key="variant.id" 
               @mouseover="updateImage(variant.image)" 
-            >{{ variant.color }}</div>
-            <button class="button" @click="addToCart">Add to Cart</button>
+              class="color-circle"
+              :style="{ 'background-color': variant.color }"
+            ></div>
+            <button 
+              class="button"
+              v-bind:class="{disabledButton: !inStock}"
+              @click="addToCart"
+              v-bind:disabled="!inStock">Add to Cart</button>
           </div>
         </div>
       </div>
